Fix spacing bug by changing margin-top to transformY.

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ cartridge {
   height: 170px;
   position: absolute;
   margin-top: 0px;
-  transition: margin-top .5s;
+  transition: transform .5s;
   width: 280px;
 }
 
